--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Comfortaa:400,700');
 @import url('https://fonts.googleapis.com/css?family=VT323');
+@import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono');
 
 html, body{
     padding: 0;
@@ -106,11 +107,54 @@ body {
 }
 
 #new-save {
+    font-family: 'Share Tech Mono';
+    font-size: 16px;
+    padding: .4em;
+    margin: 0;
+    outline: none;
 }
 
 #saves {
     grid-area: saves;
     justify-self: center;
+
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+
+        li {
+            padding: .4em;
+            box-sizing: border-box;
+            font-family: 'Share Tech Mono';
+            position: relative;
+
+            button {
+                outline: none;
+                position: absolute;
+                right: 0;
+                top: 0;
+                bottom: 0;
+                cursor: pointer;
+
+                padding: 0 0.4em;
+                margin: 0;
+                background: none;
+                border: none;
+
+                &:nth-last-of-type(2) {
+                    right: 1.5em;
+                    text-transform: uppercase;
+                    color: red;
+                    display: none;
+                }
+            }   
+
+            &:hover button:nth-last-of-type(2) {
+                display: initial;
+            }
+        }
+    }
 }
 
 #end-message {
