Update (4th day)

--- a/css/main.scss
+++ b/css/main.scss
@@ -73,7 +73,7 @@ body {
         background-color: #b3d7f0;
     }
     &.bg-green {
-        background-color: #84d679;
+        background-color: #97d68e;
         //background: radial-gradient(#84d679 50%, darken(#84d679, 15%));
     }
 }
