--- a/css/main.scss
+++ b/css/main.scss
@@ -22,11 +22,27 @@ body {
     
     font-family: 'VT323';
 
+    position: relative;
+
+    &>span {
+        font-family: 'IBM Plex Mono';
+        width: 32px;
+        text-align: center;
+        box-sizing: border-box;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 0.4em;
+        cursor: pointer;
+        display: none;
+    }
+
     & > div {
         display: none;
     }
 
     &.s0 {
+        background-color: #b3d7f0!important;
         grid-template-columns: 100%;
         grid-template-rows: 40% 60%;
         grid-template-areas: 
@@ -59,6 +75,7 @@ body {
     }
 
     &.s2 {
+        background-color: #b3d7f0!important;
         grid-template-columns: 100%;
         grid-template-rows: 35px calc(100% - 35px);
         grid-template-areas: 
@@ -67,6 +84,24 @@ body {
 
         .header, #end-message {
             display: initial;
+        }
+    }
+
+    &.s3 {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: 
+            // "header"
+            "backpack slots"
+            "item-info player-info";
+
+        // .header,
+        #slots,
+        #item-info,#player-info {
+            display: initial;
+        }
+        #backpack {
+            display: grid;
         }
     }
 
@@ -79,6 +114,11 @@ body {
         background-color: #97d68e;
         //background: radial-gradient(#84d679 50%, darken(#84d679, 15%));
     }
+}
+
+.wrapper.s1 > span,
+.wrapper.s3 > span {
+    display: initial;
 }
 
 .header {
@@ -104,10 +144,17 @@ body {
         font-style: normal;
         color: rgba(0,0,0,.3);
     }
+
+    a {
+        cursor: pointer;
+    }
 }
 
 #inventory {
     grid-area: inventory;
+}
+#inventory,
+#backpack {
     box-sizing: border-box;
     padding: 2em;
     grid-template-columns: repeat(5, 1fr);
@@ -124,6 +171,10 @@ body {
 
         position: relative;
 
+        &.equipped {
+            border: 2px solid rgba(0,0,0,0.6);
+        }
+
         & > div {
             display: none;
             position: absolute;
@@ -134,6 +185,8 @@ body {
             backdrop-filter: blur(3px);
             border: 1px solid black;
             background-color: rgba(0,0,0,0.2);
+
+            padding: 0.2em;
 
             cursor: default;
 
@@ -243,4 +296,63 @@ body {
     justify-self: center;
     align-self: center;
     font-size: 3.5em;
+}
+
+#backpack {
+    grid-area: backpack;
+    & > div {
+        &.renderingInfo {
+            box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.8);
+            font-size: 20px;
+            text-transform: uppercase;
+
+            * {
+                font-size: 16px;
+                text-transform: none;
+            }
+        }
+    }
+} 
+#slots{
+    grid-area: slots;
+    padding: 2em;
+
+    &>div {
+        width: 80%;
+        margin: 0.3em auto;
+        display: flex;
+        justify-content: space-between;
+        align-content: center;
+        
+        &>span:nth-of-type(1) {
+            align-self: center;
+        }
+        &>span:nth-of-type(2) {
+            padding: 0.4em;
+            border: 2px solid rgba(0,0,0,0.6);
+            cursor: pointer;
+            box-shadow: inset 0px 0px 8px 0px $outline;
+        }
+    }
+}
+#item-info{
+    grid-area: item-info;
+    text-align: center;
+    // padding-top: 1em;
+    font-size: 20px;
+
+    ul {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
+}
+#player-info{
+    grid-area: player-info;
+    text-align: center;
+    font-size: 20px;
+
+    &>div {
+        margin: 0.2em 0;
+    }
 }
